--- a/PRN232.Lab1.CoffeeStore.Services/PRN232.Lab1.CoffeeStore.Services.csproj
+++ b/PRN232.Lab1.CoffeeStore.Services/PRN232.Lab1.CoffeeStore.Services.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+      <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.8" />
       <PackageReference Include="VNPAY.NET" Version="8.5.0" />
     </ItemGroup>
 
