--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
       '
   api:
     build:
-      context: ./PRN232.Lab1.CoffeeStore.API
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: PRN232.Lab1.CoffeeStore.API/Dockerfile
     ports:
       - "80:8080"
     volumes:
