--- a/appsettings.example.json
+++ b/appsettings.example.json
@@ -5,7 +5,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "SQL Server Connection String"
+    "DefaultConnection": "SQL Server Connection String",
+    "RedisConnection": "Redis Connection String"
   },
   "Vnpay": {
     "TmnCode": "Your VnPay TmnCode",
